// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackgroundImage renders 1`] = `
.c0 {
  width: 100%;
  height: 0;
  padding-bottom: 75%;
  background-size: cover;
  background-position: center;
}

<div
  className="c0"
/>
`;

exports[`Box renders 1`] = `
.c0 {
  box-sizing: border-box;
}

<div
  className="c0"
/>
`;

exports[`CallToAction renders 1`] = `
.c1 {
  font-size: 14px;
  font-weight: bold;
  line-height: 1.1428571428571428;
  margin: 0px;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 16px;
  padding-bottom: 16px;
  color: white;
  background-color: blue;
  border-radius: 4px;
  border: 0;
  font-family: inherit;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1:disabled {
  opacity: 0.25;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 0 2px blue;
}

.c0 {
  text-transform: uppercase;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<a
  className="c0 c1"
/>
`;

exports[`Checklist renders 1`] = `
.c1 {
  box-sizing: border-box;
  padding: 0px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<ul
  className="c0 c1"
  p={0}
  style={
    Object {
      "listStyle": "none",
    }
  }
/>
`;

exports[`Column renders 1`] = `
.c2 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 32px;
  padding-left: 16px;
  padding-right: 16px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c0 {
  margin-bottom: 32px;
  padding-left: 16px;
  padding-right: 16px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

<div
  className="c0 c1 sc-bdVaJa c2"
/>
`;

exports[`Contributor renders 1`] = `
.c1 {
  box-sizing: border-box;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  margin: 16px;
  font-size: 20px;
  text-align: center;
  line-height: 1.25;
}

.c5 {
  margin: 16px;
  text-align: center;
}

.c6 {
  margin: 0px;
  margin-bottom: 16px;
  text-align: center;
}

.c3 {
  font-size: 20px;
  line-height: 1.25;
}

.c2 {
  height: 128px;
  width: 128px;
  border-radius: 99999px;
  display: inline-block;
}

<div
  className="c0 c1 sc-bdVaJa c1"
>
  <img
    className="c2"
    src={undefined}
  />
  <div
    className="c3 c4 sc-gqjmRU c5"
  />
  <div
    className="c6"
    style={
      Object {
        "opacity": 0.75,
      }
    }
  />
</div>
`;

exports[`Feature renders 1`] = `
.c0 {
  box-sizing: border-box;
  width: 50%;
  margin-top: 4px;
  margin-bottom: 4px;
  padding: 16px;
}

.c3 {
  margin: 16px;
  font-size: 20px;
  font-weight: bold;
  text-align: center;
  line-height: 1.25;
}

.c4 {
  margin: 16px;
  font-weight: bold;
  text-align: center;
}

.c5 {
  margin: 0px;
  text-align: center;
}

.c1 {
  font-size: 32px;
  font-weight: bold;
  line-height: 1.25;
  margin: 0px;
  margin-bottom: 16px;
  text-align: center;
}

.c2 {
  font-size: 20px;
  line-height: 1.25;
}

@media screen and (min-width:40em) {
  .c0 {
    width: 33.33333333333333%;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    width: 25%;
  }
}

@media screen and (min-width:64em) {
  .c0 {
    width: 20%;
  }
}

@media screen and (min-width:40em) {
  .c0 {
    margin-top: 8px;
    margin-bottom: 8px;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    margin-top: 16px;
    margin-bottom: 16px;
  }
}

<div
  className="c0"
>
  <h2
    className="c1"
  >
    🔥
  </h2>
  <div
    className="c2 c3 sc-gqjmRU c4"
  >
    Feature
  </div>
  <div
    className="c5"
    style={
      Object {
        "opacity": 0.75,
      }
    }
  >
    description
  </div>
</div>
`;

exports[`Flex renders 1`] = `
.c1 {
  box-sizing: border-box;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="c0 c1 sc-bdVaJa c1"
/>
`;

exports[`Heading renders 1`] = `
.c0 {
  font-size: 32px;
  font-weight: bold;
  line-height: 1.25;
  margin: 0px;
}

<h2
  className="c0"
/>
`;

exports[`Hero renders 1`] = `
.c4 {
  box-sizing: border-box;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  z-index: -1;
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
}

.c0 {
  position: relative;
}

.c1 {
  position: absolute;
}

<div
  className="c0 sc-TOsTZ kjYrri"
>
  <div
    className="c1 c2 sc-TOsTZ c2"
    style={
      Object {
        "height": "100%",
        "opacity": 1,
      }
    }
  />
  <div
    className="c3 c4 sc-bdVaJa c4"
    style={
      Object {
        "minHeight": "100vh",
      }
    }
  />
</div>
`;

exports[`Image renders 1`] = `
.c0 {
  display: block;
  max-width: 100%;
  height: auto;
}

<img
  className="c0"
/>
`;

exports[`Laptop renders 1`] = `
.c3 {
  box-sizing: border-box;
}

.c0 {
  box-sizing: border-box;
  padding: 16px;
  background-color: black;
}

.c1 {
  display: block;
  max-width: 100%;
  height: auto;
}

.c2 {
  position: absolute;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  bottom: -18px;
  width: calc(100% + 64px);
  height: 18px;
  border-radius: 2px;
  background: grey;
}

.c4 {
  position: absolute;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  bottom: -8px;
  width: 100px;
  height: 8px;
  background: #333;
}

<div
  className="c0"
  style={
    Object {
      "border": "1px solid grey",
      "borderRadius": 4,
      "position": "relative",
    }
  }
>
  <img
    className="c1"
    src="https://via.placeholder.com/640x400"
  />
  <div
    className="c2 c3"
  />
  <div
    className="c4 c3"
  />
</div>
`;

exports[`MacWindow renders 1`] = `
.c0 {
  box-sizing: border-box;
  background-color: #fbfbfb;
}

.c1 {
  box-sizing: border-box;
  padding-left: 4px;
}

.c3 {
  display: block;
  max-width: 100%;
  height: auto;
}

.c2 {
  margin: 0px;
  padding: 0px;
  height: 16px;
  width: 16px;
  background-color: darken;
  border-radius: 99999px;
  border: 4px solid;
  border-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-clip: padding-box;
}

.c2:focus {
  background-color: blue;
}

.c2:hover {
  background-color: blue;
}

.c2:disabled {
  opacity: 0.25;
}

<div
  className="c0"
  style={
    Object {
      "borderRadius": 4,
      "boxShadow": "inset 0 1px 0 rgba(255,255,255,.6), 0 22px 70px 4px rgba(0,0,0,0.56), 0 0 0 1px rgba(0, 0, 0, 0.3)",
      "overflow": "hidden",
    }
  }
>
  <div
    className="c1"
    style={
      Object {
        "background": "linear-gradient(#ebebeb, #d5d5d5)",
        "borderBottom": "1px solid #b1aeb1",
      }
    }
  >
    <button
      className="c2"
    />
    <button
      className="c2"
    />
    <button
      className="c2"
    />
  </div>
  <img
    className="c3"
    src="https://via.placeholder.com/640x480"
  />
</div>
`;

exports[`Phone renders 1`] = `
.c0 {
  box-sizing: border-box;
  padding-left: 1%;
  padding-right: 1%;
  padding-top: 4%;
  padding-bottom: 4%;
  background-color: grey;
}

.c1 {
  display: block;
  max-width: 100%;
  height: auto;
}

<div
  className="c0"
  style={
    Object {
      "borderRadius": 20,
      "boxShadow": "inset 0 1px 0 rgba(255,255,255,.6), 0 22px 70px 4px rgba(0,0,0,0.56), 0 0 0 1px rgba(0, 0, 0, 0.3)",
      "position": "relative",
    }
  }
>
  <img
    className="c1"
    src="https://via.placeholder.com/187x406"
    style={
      Object {
        "borderRadius": 16,
      }
    }
  />
</div>
`;

exports[`PricingTier renders 1`] = `
.c1 {
  box-sizing: border-box;
  width: 100%;
  margin-top: 4px;
  margin-bottom: 4px;
  padding: 4px;
}

.c6 {
  box-sizing: border-box;
  margin-top: 8px;
  margin-bottom: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c3 {
  margin: 0px;
  font-size: 20px;
  line-height: 1.25;
}

.c4 {
  margin: 0px;
}

.c7 {
  margin: 0px;
  font-size: 48px;
  font-weight: bold;
}

.c8 {
  margin: 8px;
}

.c2 {
  font-size: 20px;
  line-height: 1.25;
}

@media screen and (min-width:40em) {
  .c1 {
    width: 50%;
  }
}

@media screen and (min-width:52em) {
  .c1 {
    width: 33.33333333333333%;
  }
}

@media screen and (min-width:40em) {
  .c1 {
    margin-top: 8px;
    margin-bottom: 8px;
    padding: 8px;
  }
}

@media screen and (min-width:52em) {
  .c1 {
    margin-top: 16px;
    margin-bottom: 16px;
    padding: 16px;
  }
}

<div
  className="c0 c1 sc-bdVaJa c1"
  name="Premium"
>
  <div
    className="c2 c3 sc-gqjmRU c4"
  />
  <div
    className="c5 c6 sc-bdVaJa c6"
  >
    <div
      className="c7"
    >
      $99
    </div>
    <div
      className="c8"
      style={
        Object {
          "opacity": 0.75,
        }
      }
    >
      yearly
    </div>
  </div>
</div>
`;

exports[`Row renders 1`] = `
.c3 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  margin-left: -16px;
  margin-right: -16px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  margin-left: -16px;
  margin-right: -16px;
}

<div
  className="c0 c1 c2 sc-bwzfXH c1 sc-bdVaJa c3 sc-bdVaJa c3"
/>
`;

exports[`ScrollDownIndicator renders 1`] = `
.c1 {
  font-size: 14px;
  font-weight: bold;
  line-height: 1.1428571428571428;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: transparent;
  border-radius: 2px;
  border: 0;
  font-family: inherit;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1:disabled {
  opacity: 0.25;
}

.c1:focus {
  outline: none;
  box-shadow: 0 0 0 2px transparent;
}

.c0 {
  position: absolute;
  bottom: 20px;
  left: 50%;
  -webkit-animation: kdHdTw 1s ease infinite;
  animation: kdHdTw 1s ease infinite;
  color: inherit;
}

<button
  className="c0 c1"
>
  ╲╱
</button>
`;

exports[`SignUp renders 1`] = `
.c1 {
  box-sizing: border-box;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  font-size: 14px;
  font-weight: bold;
  line-height: 1.1428571428571428;
  margin: 0px;
  margin-left: 16px;
  margin-top: 16px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: blue;
  border-radius: 2px;
  border: 0;
  font-family: inherit;
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c4:disabled {
  opacity: 0.25;
}

.c4:focus {
  outline: none;
  box-shadow: 0 0 0 2px blue;
}

.c2 {
  font-size: 14px;
  margin-bottom: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  font-size: inherit;
  line-height: inherit;
  margin: 0px;
  padding-left: 4px;
  padding-right: 4px;
  padding-top: 8px;
  padding-bottom: 8px;
  width: 100%;
  border: 0;
  border-color: gray;
  box-shadow: 1;
  border-radius: 2px;
  color: inherit;
  background-color: transparent;
  font-family: inherit;
  display: inline-block;
  vertical-align: middle;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3:focus {
  outline: none;
  box-shadow: inset 0 0 0 1px undefined;
}

.c3:disabled {
  opacity: 0.25;
}

<form
  className="c0 c1"
  onSubmit={[Function]}
>
  <div
    className="c1"
  >
    <label
      className="c2"
    >
      Email Address
    </label>
    <input
      className="c3"
      onChange={[Function]}
      type="email"
      value=""
    />
  </div>
  <button
    className="c4"
  >
    Sign Up
  </button>
</form>
`;

exports[`Subhead renders 1`] = `
.c2 {
  font-size: 32px;
  font-weight: bold;
  line-height: 1.25;
  margin: 0px;
}

.c1 {
  font-size: 24px;
  font-weight: bold;
  line-height: 1.25;
  margin: 0px;
}

.c0 {
  font-size: 24px;
}

<h3
  className="c0 c1 sc-VigVT c2"
/>
`;

exports[`Testimony renders 1`] = `
.c1 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  margin: 0px;
  font-size: 20px;
  line-height: 1.25;
}

.c7 {
  margin: 0px;
}

.c5 {
  font-size: 20px;
  line-height: 1.25;
}

.c4 {
  height: 64px;
  width: 64px;
  border-radius: 99999px;
  display: inline-block;
  margin-right: 16px;
}

<div
  className="c0 c1 sc-bdVaJa c1"
>
  <div
    className="c2 c3 sc-bdVaJa c3"
  >
    <img
      className="c4"
      src="https://via.placeholder.com/64x64"
    />
    <div
      className="c1"
    >
      <div
        className="c5 c6 sc-gqjmRU c7"
      >
        Anonymous
      </div>
      <div
        className="c7"
        style={
          Object {
            "opacity": 0.75,
          }
        }
      >
        expert
      </div>
    </div>
  </div>
</div>
`;
